# Clusters3DNearPercolation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ТЕОРЕТИЧЕСКАЯ_Тимофеев.docx
data/configs/: default.json  test.json
include/: clusters_data.h  lattice.h
include/config/: config.h
include/system/: lattice.h
scripts/: make_plots.py
src/: config.cpp  lattice.cpp  main.cpp
src/config/: config.cpp
src/system/: lattice.cpp
